<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombres"
                    android:id="@+id/nombresInput" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos"
                    android:id="@+id/apellidosInput" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/emailInput"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:id="@+id/telefonoInput" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ciudadesSpinner"
                android:entries="@array/ciudades"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/tipo_de_comida_favorita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comidasSpinner"
                android:entries="@array/comidas"
                android:layout_marginTop="10dp" />

            <Button
                android:text="@string/registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registroButton"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>